Arreglo de imagenes y los href

--- a/Thug Knowledge - Duoc UC/Index.html
+++ b/Thug Knowledge - Duoc UC/Index.html
@@ -18,17 +18,17 @@
     <!-- Comienza Navbar de la pagina -->
     <nav class="navbar navbar-expand-sm bg-black navbar-dark">
       <div class="container-fluid">
-          <a class="navbar-brand" href="/Index2.html">THUG TRADE</a>
+          <a class="navbar-brand" href="Index.html">THUG TRADE</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link" href="/Index2.html">Inicio</a>
+                <a class="nav-link" href="Index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Shop.html">Vinilos</a>
+                <a class="nav-link" href="Shop.html">Vinilos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="javascript:void(0)">Libros</a>
