--- a/Thug Knowledge - Duoc UC/Shop.html
+++ b/Thug Knowledge - Duoc UC/Shop.html
@@ -12,17 +12,17 @@
     <!-- Comienza Navbar de la pagina -->
     <nav class="navbar navbar-expand-sm bg-black navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/Index2.html">THUG TRADE</a>
+            <a class="navbar-brand" href="Index.html">THUG TRADE</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="mynavbar">
               <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="/Index2.html">Inicio</a>
+                  <a class="nav-link" href="Index2.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Shop.html">Vinilos</a>
+                  <a class="nav-link" href="Shop.html">Vinilos</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="javascript:void(0)">Libros</a>
@@ -49,20 +49,20 @@
       </a>  
       
       <div class="row card-group mt-3 col-sm-12">
-            <a href=" aqui va el detalle del producto /" class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/lndjuice.jpg" alt="Card image">
+            <a href="aqui va el detalle del producto/" class="card border-0" style="width:200px">
+                <img class="card-img-top" src="img/lndjuice.jpg" alt="Card image">
                 <br>
                 <h5>Legends Never Die</h5>
                 <p>Juice Wrld</p>
             </a > 
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/sftpopsmoke.jpg" alt="Card image">
+                <img class="card-img-top" src="img/sftpopsmoke.jpg" alt="Card image">
                 <br>
                 <h5>Shoot For The Stars Aim For The Moon (Deluxe)</h5>
                 <p>Pop Smoke</p>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/wtobkingvon.png" alt="Card image">
+                <img class="card-img-top" src="img/wtobkingvon.png" alt="Card image">
                 <br>
                 <h5>Welcome To O'Block</h5>
                 <p>King Von</p>
@@ -70,19 +70,19 @@
         </div>
         <div class="row card-group mt-3 col-sm-12">
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/ddverdepablo.jpg" alt="Card image">
+                <img class="card-img-top" src="img/ddverdepablo.jpg" alt="Card image">
                 <br>
                 <h5>Duende Verde The Mixtape</h5>
                 <p1>Pablo Chill-e</p1>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/topimpkendrick.jpg" alt="Card image">
+                <img class="card-img-top" src="img/topimpkendrick.jpg" alt="Card image">
                 <br>
                 <h5>To Pimp A Butterfly</h5>
                 <p1>Kendrick Lamar</p1>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/kanyegraduation.jpg" alt="Card image">
+                <img class="card-img-top" src="img/kanyegraduation.jpg" alt="Card image">
                 <br>
                 <h5>Graduation</h5>
                 <p1>Kanye West</p1>
@@ -164,7 +164,7 @@
             style="background-color: rgba(0, 0, 0, 0.2)"
           >
             © 2023 Copyright:
-            <a class="text-white" href="Index2.html">THUG TRADE</a>
+            <a class="text-white" href="Index.html">THUG TRADE</a>
           </div>
           <!-- Copyright -->
         </footer>
