--- a/Thug Knowledge - Duoc UC/Index.html
+++ b/Thug Knowledge - Duoc UC/Index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <title>Title</title>
+  <title>Thug Trade | Inicio</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -31,20 +31,12 @@
                 <a class="nav-link" href="Shop.html">Vinilos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="javascript:void(0)">Libros</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Eventos</a>
+                  <a class="nav-link" href="Eventos.html">Eventos</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="javascript:void(0)">Blog</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="text" placeholder="Search">
-              <button class="btn btn-primary" type="button">Search</button>
-            </form>
-          </div>
         </div>
   </nav>
   <!-- Cierra Navbar de la pagina -->
@@ -123,14 +115,88 @@
         </div>
       </div>
 
-
-
-
-
-
   </main>
   <footer>
-    <!-- place footer here -->
+    <!-- Comienza el footer -->
+    <section class="">
+      <!-- Footer -->
+      <footer class="bg-black text-white text-center text-md-start">
+        <!-- Grid container -->
+        <div class="container p-4">
+          <!--Grid row-->
+          <div class="row">
+            <!--Grid column-->
+            <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+              <h5 class="text-uppercase">THUG TRADE</h5>
+              <p>
+                THUG TRADE es el sistema mas grande de ventas de Vinilos
+               <br> 
+                y merch de tus artistas favoritos, comparte la musica, comparte conocimiento.
+              </p>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h5 class="text-uppercase">TRADE</h5>
+
+              <ul class="list-unstyled mb-0">
+                <li>
+                  <a href="#!" class="text-white">Acerca de THUG TRADE</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-white"
+                    >Busca a tu artista favorito</a
+                  >
+                </li>
+                <li>
+                  <a href="#!" class="text-white">Anunciar</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-white">Politica de privacidad</a>
+                </li>
+              </ul>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+              <h5 class="text-uppercase mb-0">THE KNOWLEDGE</h5>
+
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#!" class="text-white">Licencia</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-white">Contactanos</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-white">Desarrolladores</a>
+                </li>
+                <li>
+                  <a href="#!" class="text-white">Condiciones de uso</a>
+                </li>
+              </ul>
+            </div>
+            <!--Grid column-->
+          </div>
+          <!--Grid row-->
+        </div>
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div
+          class="text-center p-3"
+          style="background-color: rgba(0, 0, 0, 0.2)"
+        >
+          © 2023 Copyright:
+          <a class="text-white" href="Index.html">THUG TRADE</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
+      <!-- Footer -->
+    </section>
+    <!-- Cierra el footer -->
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
