--- a/Thug Knowledge - Duoc UC/Shop.html
+++ b/Thug Knowledge - Duoc UC/Shop.html
@@ -4,43 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thug Trade | Shop</title>
+    <title>Thug Trade | Tienda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <!-- Comienza Navbar de la pagina -->
     <nav class="navbar navbar-expand-sm bg-black navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="Index.html">THUG TRADE</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="mynavbar">
-              <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="Index2.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="Shop.html">Vinilos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Libros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">Eventos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">Blog</a>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Search">
-                <button class="btn btn-primary" type="button">Search</button>
-              </form>
-            </div>
+      <div class="container-fluid">
+          <a class="navbar-brand" href="Index.html">THUG TRADE</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="Index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Shop.html">Vinilos</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="Eventos.html">Eventos</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0)">Blog</a>
+              </li>
+            </ul>
           </div>
-    </nav>
+        </div>
+     </nav>
     <!-- Cierra Navbar de la pagina -->
     <!-- Comienza Container de Vinilos -->
     <div class="container-md pt-2 mt-3">
@@ -49,12 +42,12 @@
       </a>  
       
       <div class="row card-group mt-3 col-sm-12">
-            <a href="aqui va el detalle del producto/" class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/lndjuice.jpg" alt="Card image">
-                <br>
-                <h5>Legends Never Die</h5>
-                <p>Juice Wrld</p>
-            </a > 
+            <div class="card border-0" style="width:200px">
+              <img class="card-img-top" src="img/lndjuice.jpg" alt="Card image">
+              <br>
+              <h5>Legends Never Die</h5>
+              <p>Juice Wrld</p>
+            </div> 
             <div class="card border-0" style="width:200px">
                 <img class="card-img-top" src="img/sftpopsmoke.jpg" alt="Card image">
                 <br>
