Actualización del catalogo de vinilos
Moví los vinilos a la derecha y con un container mas pequeño, se necesita implementar el filtro a la izquierda de los vinilos

--- a/Thug Knowledge - Duoc UC/Shop.html
+++ b/Thug Knowledge - Duoc UC/Shop.html
@@ -36,11 +36,7 @@
      </nav>
     <!-- Cierra Navbar de la pagina -->
     <!-- Comienza Container de Vinilos -->
-    <div class="container-md pt-2 mt-3">
-      <a href="">
-
-      </a>  
-      
+    <div id="interiorcontainer" class="container-md pt-2 mt-3" style="margin-right: 3%; width: 70%">
       <div class="row card-group mt-3 col-sm-12">
             <div class="card border-0" style="width:200px">
               <img class="card-img-top" src="img/lndjuice.jpg" alt="Card image">
