Acerca de agregado

--- a/Thug Knowledge - Duoc UC/Index.html
+++ b/Thug Knowledge - Duoc UC/Index.html
@@ -142,7 +142,7 @@
 
               <ul class="list-unstyled mb-0">
                 <li>
-                  <a href="#!" class="text-white">Acerca de THUG TRADE</a>
+                  <a href="Acercade.html" class="text-white">Acerca de THUG TRADE</a>
                 </li>
                 <li>
                   <a href="#!" class="text-white"
