--- a/Thug Knowledge - Duoc UC/Acercade.html
+++ b/Thug Knowledge - Duoc UC/Acercade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thug Trade | Tienda</title>
+    <title>Thug Trade | Acerca de</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -36,47 +36,15 @@
      </nav>
     <!-- Cierra Navbar de la pagina -->
     <!-- Comienza Container de Vinilos -->
-    <div id="interiorcontainer" class="container-md pt-2 mt-3" style="margin-right: 3%; width: 70%">
-      <div class="row card-group mt-3 col-sm-12">
-            <div class="card border-0" style="width:200px">
-              <img class="card-img-top" src="img/lndjuice.jpg" alt="Card image">
-              <br>
-              <h5>Legends Never Die</h5>
-              <p>Juice Wrld</p>
-            </div> 
-            <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/sftpopsmoke.jpg" alt="Card image">
-                <br>
-                <h5>Shoot For The Stars Aim For The Moon (Deluxe)</h5>
-                <p>Pop Smoke</p>
-            </div>
-            <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/wtobkingvon.png" alt="Card image">
-                <br>
-                <h5>Welcome To O'Block</h5>
-                <p>King Von</p>
-            </div>
-        </div>
-        <div class="row card-group mt-3 col-sm-12">
-            <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/ddverdepablo.jpg" alt="Card image">
-                <br>
-                <h5>Duende Verde The Mixtape</h5>
-                <p1>Pablo Chill-e</p1>
-            </div>
-            <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/topimpkendrick.jpg" alt="Card image">
-                <br>
-                <h5>To Pimp A Butterfly</h5>
-                <p1>Kendrick Lamar</p1>
-            </div>
-            <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/kanyegraduation.jpg" alt="Card image">
-                <br>
-                <h5>Graduation</h5>
-                <p1>Kanye West</p1>
-            </div>
-        </div>
+    <div id="interiorcontainer" class="container-md pt-2 mt-3" style="margin: 50;">
+        <center><img src="img/Logo.jpg" alt="" width="400" height="400"></center>
+        <h6>Fundada en 2013, Thug Trade es una compañía de venta de vinilos impulsada por la comunidad, nuestro equipo creativo interno y los propios artistas. Servimos conocimiento musical a más de 100 millones de personas cada mes en ThugTrade.com y en todas partes donde los fanáticos de la música se conectan a través de Internet.</h6>
+        <br>
+        <h6>Thug Trade comenzó como una plataforma para poder publicar tus vinilos y crear un lugar de colaboración en conocimientos para la comunidad: nuestro nombre original era Rap Thuggers. Con los años, hemos ampliado nuestra misión para incluir más que hip-hop, y más que solo letras. Cada vinilo tiene una historia que debe ser contada, y los nombres más importantes de la música, incluidos Kendrick Lamar, Ariana Grande y Lin-Manuel Miranda, vienen a Thug Trade para darle al mundo una visión de su arte.</h6>
+        <br>
+        <h6>La comunidad de Thug Trade se ha convertido en una fuerza influyente de más de 2 millones de colaboradores, editores y músicos que se registran para debatir y deconstruir sus vinilos favoritos con fanáticos de todo el mundo. Como resultado de su IQ de música colectiva, tenemos la mejor base de datos de letras y conocimiento en Internet: más de 25 millones de vinilos.</h6>
+        <br>
+        <h6>El equipo creativo interno de Thug Trade destaca las historias detrás de la música más importante. Trabajan con artistas y la comunidad para transformar el conocimiento interno en videos, eventos, funciones en profundidad, cobertura de noticias de última hora y una variedad de contenido de conocimiento musical para las masas.</h6>
         <br>
     </div>
     <!-- Cierra Container de Vinilos -->
