--- a/Thug Knowledge - Duoc UC/Shop.html
+++ b/Thug Knowledge - Duoc UC/Shop.html
@@ -10,36 +10,27 @@
 </head>
 <body>
     <!-- Comienza Navbar de la pagina -->
-    <nav class="navbar navbar-expand-sm bg-black navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/Index2.html">THUG TRADE</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="mynavbar">
-              <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="/Index2.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/Shop.html">Vinilos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Libros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">Eventos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">Blog</a>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Search">
-                <button class="btn btn-primary" type="button">Search</button>
-              </form>
-            </div>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Inicio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blogs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+          </ul>
+         
+        </div>
+      </div>
     </nav>
     <!-- Cierra Navbar de la pagina -->
     <!-- Comienza Container de Vinilos -->
@@ -50,19 +41,19 @@
       
       <div class="row card-group mt-3 col-sm-12">
             <a href=" aqui va el detalle del producto /" class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/lndjuice.jpg" alt="Card image">
+                <img class="card-img-top" src="img/lndjuice.jpg" alt="Card image">
                 <br>
                 <h5>Legends Never Die</h5>
                 <p>Juice Wrld</p>
             </a > 
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/sftpopsmoke.jpg" alt="Card image">
+                <img class="card-img-top" src="img/sftpopsmoke.jpg" alt="Card image">
                 <br>
                 <h5>Shoot For The Stars Aim For The Moon (Deluxe)</h5>
                 <p>Pop Smoke</p>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/wtobkingvon.png" alt="Card image">
+                <img class="card-img-top" src="img/wtobkingvon.png" alt="Card image">
                 <br>
                 <h5>Welcome To O'Block</h5>
                 <p>King Von</p>
@@ -70,19 +61,19 @@
         </div>
         <div class="row card-group mt-3 col-sm-12">
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/ddverdepablo.jpg" alt="Card image">
+                <img class="card-img-top" src="img/ddverdepablo.jpg" alt="Card image">
                 <br>
                 <h5>Duende Verde The Mixtape</h5>
                 <p1>Pablo Chill-e</p1>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/topimpkendrick.jpg" alt="Card image">
+                <img class="card-img-top" src="img/topimpkendrick.jpg" alt="Card image">
                 <br>
                 <h5>To Pimp A Butterfly</h5>
                 <p1>Kendrick Lamar</p1>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="/img/kanyegraduation.jpg" alt="Card image">
+                <img class="card-img-top" src="img/kanyegraduation.jpg" alt="Card image">
                 <br>
                 <h5>Graduation</h5>
                 <p1>Kanye West</p1>
