--- a/Thug Knowledge - Duoc UC/Index.html
+++ b/Thug Knowledge - Duoc UC/Index.html
@@ -15,41 +15,26 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm bg-black navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
+          <a class="navbar-brand" href="Index.html">THUG TRADE</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="Shop.html">Vinilos</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="Eventos.html">Eventos</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="javascript:void(0)">Blog</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
     </nav>
   </header>
   <main>
@@ -69,14 +54,14 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/14.jpg" class="d-block w-100" alt="...">
+              <img src="img/lndjuice.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/14.jpg" class="d-block w-100" alt="...">
+              <img src="img/kanyegraduation.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
@@ -99,23 +84,23 @@
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="producto1.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="card" >
-              <img src="img/14.jpg" class="card-img-top" alt="...">
+              <img src="img/lndjuice.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="producto2.html" class="btn btn-primary">Comprar</a>
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 col-xxl-4">
             <div class="card" >
-              <img src="img/14.jpg" class="card-img-top" alt="...">
+              <img src="img/kanyegraduation.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -125,16 +110,84 @@
           </div>
         </div>
       </div>
-
-
-
-
-
-
   </main>
-  <footer>
-    <!-- place footer here -->
-  </footer>
+  <section class="">
+    <!-- Footer -->
+    <footer class="bg-black text-white text-center text-md-start">
+      <!-- Grid container -->
+      <div class="container p-4">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+            <h5 class="text-uppercase">THUG TRADE</h5>
+            <p>
+              THUG TRADE es el sistema mas grande de ventas de Vinilos
+             <br> 
+              y merch de tus artistas favoritos, comparte la musica, comparte conocimiento.
+            </p>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">TRADE</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="quienes.html" class="text-white">Acerca de THUG TRADE</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white"
+                  >Busca a tu artista favorito</a
+                >
+              </li>
+              <li>
+                <a href="#!" class="text-white">Anunciar</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Politica de privacidad</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase mb-0">THE KNOWLEDGE</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!" class="text-white">Licencia</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Contactanos</a>
+              </li>
+              <li>
+                <a href="quienes.html" class="text-white">Desarrolladores</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Condiciones de uso</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </div>
+      <!-- Grid container -->
+
+      <!-- Copyright -->
+      <div
+        class="text-center p-3"
+        style="background-color: rgba(0, 0, 0, 0.2)"
+      >
+        © 2023 Copyright:
+        <a class="text-white" href="Index.html">THUG TRADE</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+  
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
