--- a/Thug Knowledge - Duoc UC/carrito.html
+++ b/Thug Knowledge - Duoc UC/carrito.html
@@ -18,7 +18,7 @@
     <!-- place navbar here -->
     <nav class="navbar navbar-expand-sm bg-black navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/Index2.html">THUG TRADE</a>
+            <a class="navbar-brand" href="/Index2.html">THUG TRADEa</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
               <span class="navbar-toggler-icon"></span>
             </button>
