--- a/Thug Knowledge - Duoc UC/Acercade.html
+++ b/Thug Knowledge - Duoc UC/Acercade.html
@@ -12,7 +12,7 @@
     <!-- Comienza Navbar de la pagina -->
     <nav class="navbar navbar-expand-sm bg-black navbar-dark">
       <div class="container-fluid">
-          <a class="navbar-brand" href="Index.html">THUG TRADE</a>
+          <a class="navbar-brand" href="Index.html">THUG TRADEss</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
