--- a/Thug Knowledge - Duoc UC/Index.html
+++ b/Thug Knowledge - Duoc UC/Index.html
@@ -102,19 +102,19 @@
     <center><h2>LOS DISCOS FAVORITOS DE LA COMUNIDAD</h2></center>
     <div class="row card-group mt-3 col-sm-12">
           <div class="card border-0" style="width:200px">
-            <img class="card-img-top" src="img/lndjuice.jpg" alt="Card image">
+            <a href="producto2.html"><img class="card-img-top" src="img/lndjuice.jpg" alt="Card image"></a>
             <br>
             <h5>Legends Never Die</h5>
             <p>Juice Wrld</p>
           </div> 
           <div class="card border-0" style="width:200px">
-              <img class="card-img-top" src="img/sftpopsmoke.jpg" alt="Card image">
+              <a href="producto4.html"><img class="card-img-top" src="img/sftpopsmoke.jpg" alt="Card image"></a>
               <br>
               <h5>Shoot For The Stars Aim For The Moon (Deluxe)</h5>
               <p>Pop Smoke</p>
           </div>
           <div class="card border-0" style="width:200px">
-              <img class="card-img-top" src="img/wtobkingvon.png" alt="Card image">
+              <a href="producto3.html"><img class="card-img-top" src="img/wtobkingvon.png" alt="Card image"></a>
               <br>
               <h5>Welcome To O'Block</h5>
               <p>King Von</p>
