--- a/Thug Knowledge - Duoc UC/Shop.html
+++ b/Thug Knowledge - Duoc UC/Shop.html
@@ -39,13 +39,13 @@
     <div id="interiorcontainer" class="container-md pt-2 mt-3" style="margin-right: 3%; width: 70%">
       <div class="row card-group mt-3 col-sm-12">
             <div class="card border-0" style="width:200px">
-              <img class="card-img-top" src="img/lndjuice.jpg" alt="Card image">
+              <a href="producto2.html"><img class="card-img-top" src="img/lndjuice.jpg" alt="Card image"></a>
               <br>
               <h5>Legends Never Die</h5>
               <p>Juice Wrld</p>
             </div> 
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/sftpopsmoke.jpg" alt="Card image">
+                <a href="producto3.html"><img class="card-img-top" src="img/sftpopsmoke.jpg" alt="Card image"></a>
                 <br>
                 <h5>Shoot For The Stars Aim For The Moon (Deluxe)</h5>
                 <p>Pop Smoke</p>
