Agregar productos integrado al dashboard

--- a/Thug Knowledge - Duoc UC/dashboard.html
+++ b/Thug Knowledge - Duoc UC/dashboard.html
@@ -75,7 +75,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" href="agregarprodc.html">
                 <span data-feather="layers"></span>
                 Agregar Productos
               </a>
@@ -103,7 +103,7 @@
           </div>
         </div>
 
-        <h2>Acitividad</h2>
+        <h2>Actividad</h2>
         <div class="table-responsive">
           <table class="table table-striped table-sm">
             <thead>
