Inclusion de script y actualizacion dashboard

--- a/Thug Knowledge - Duoc UC/agregarprodc.html
+++ b/Thug Knowledge - Duoc UC/agregarprodc.html
@@ -93,7 +93,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">
+              <a class="nav-link" href="#">
                 <span data-feather="shopping-cart"></span>
                 Productos
               </a>
@@ -106,7 +106,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="agregarprodc.html">
+              <a class="nav-link active" aria-current="page"  href="agregarprodc.html">
                 <span data-feather="layers"></span>
                 Agregar Productos
               </a>
