Auto stash before merge of "MartinMordelon" and "origin/matiasmordelon"

--- a/Thug Knowledge - Duoc UC/index2.html
+++ b/Thug Knowledge - Duoc UC/index2.html
@@ -16,7 +16,7 @@
             <div class="col-md-6 rounded-4 d-flex justify-content-center align-items-center flex-column left-box"
                 style="background: #fff;">
                 <div class="featured-image mb-3">
-                    <img src="img/Logogrande.png" class="img-fluid" style="width: 250px;">
+                    <img src="ImagenesFull_Size/Logo.jpg" class="img-fluid" style="width: 400px;">
                 </div>
                 <p class="text-white fs-2" style="font-family: 'Courier New', Courier, monospace; font-weight: 600;">
                     </p>
@@ -55,11 +55,11 @@
                         <button class="btn btn-lg btn-primary w-100 fs-6">Login</button>
                     </div></a>
                     <div class="input-group mb-3">
-                        <button class="btn btn-lg btn-light w-100 fs-6"><img src="img/google.png" style="width:20px"
+                        <button class="btn btn-lg btn-light w-100 fs-6"><img src="ImagenesFull_Size/google.png" style="width:20px"
                                 class="me-2"><small>Inicia sesion con google</small></button>
                     </div>
                     <div class="row">
-                        <small>No tienes cuenta? <a href="#">Crea tu cuenta </a></small>
+                        <a href="regitro.html"></a><small>No tienes cuenta? <a href="#">Crea tu cuenta </a></small>
                     </div>
                 </div>
             </div>
