--- a/Thug Knowledge - Duoc UC/Acercade.html
+++ b/Thug Knowledge - Duoc UC/Acercade.html
@@ -33,11 +33,11 @@
             </ul>
           </div>
         </div>
-     </nav>
+    </nav>
     <!-- Cierra Navbar de la pagina -->
     <!-- Comienza Container de Vinilos -->
     <div id="interiorcontainer" class="container-md pt-2 mt-3" style="margin: 50;">
-        <center><img src="img/Logo.jpg" alt="" width="400" height="400"></center>
+        <center><img src="ImagenesFull_Size/Logo.jpg" alt="" width="400" height="400"></center>
         <h6>Fundada en 2013, Thug Trade es una compañía de venta de vinilos impulsada por la comunidad, nuestro equipo creativo interno y los propios artistas. Servimos conocimiento musical a más de 100 millones de personas cada mes en ThugTrade.com y en todas partes donde los fanáticos de la música se conectan a través de Internet.</h6>
         <br>
         <h6>Thug Trade comenzó como una plataforma para poder publicar tus vinilos y crear un lugar de colaboración en conocimientos para la comunidad: nuestro nombre original era Rap Thuggers. Con los años, hemos ampliado nuestra misión para incluir más que hip-hop, y más que solo letras. Cada vinilo tiene una historia que debe ser contada, y los nombres más importantes de la música, incluidos Kendrick Lamar, Ariana Grande y Lin-Manuel Miranda, vienen a Thug Trade para darle al mundo una visión de su arte.</h6>
