--- a/Thug Knowledge - Duoc UC/carrito.html
+++ b/Thug Knowledge - Duoc UC/carrito.html
@@ -6,6 +6,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/Carro_Compra.css"
 
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,35 +19,35 @@
     <!-- place navbar here -->
 
     <nav class="navbar navbar-expand-sm bg-black navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/Index2.html">THUG TRADE</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="mynavbar">
-              <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="/Index2.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/Shop.html">Vinilos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Libros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">Eventos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">Blog</a>
-                </li>
-              </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Search">
-                <button class="btn btn-primary" type="button">Search</button>
-              </form>
-            </div>
-          </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/Index2.html">THUG TRADE</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mynavbar">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/Index2.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/Shop.html">Vinilos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0)">Libros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0)">Eventos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0)">Blog</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="text" placeholder="Search">
+            <button class="btn btn-primary" type="button">Search</button>
+          </form>
+        </div>
+      </div>
     </nav>
 
   </header>
@@ -99,87 +100,33 @@
             </div>
           </div>
 
-        </div>
-        <div class="col-4 offset-md-8">
-          <h1> Resumen  </h1>
-          <ol class="list-group list-group-numbered">
-            <li class="list-group-item">Welcome To O'Block</li><li>$30.000 </li>
-            <li class="list-group-item">Shoot For The Stars Aim For The Moon (Deluxe) </li><li>$75.000</li>
-            <li class="list-group-item">Legends Never die</li> <li>$55.000</li>
-          </ol>
-          <a href="regitro.html"><button type="button" class="btn btn-primary">Pagar</button></a>
+
+          <!-- Ingresar Boton de pagado y salida  -->
+          <div class="pago" style="display: flex; align-items: center; justify-content: center; height: 200px;"">
+            <a href="regitro.html"></a><button class="pagar">
+                Pagar
+
+            </button>
           </div>
-        </div>
-      </div>
-    </div>
-
-
-
 
   </main>
   <footer>
     <!-- place footer here -->
     <section class="">
-        <!-- Footer -->
-        <footer class="bg-black text-white text-center text-md-start">
-          <!-- Grid container -->
-          <div class="container p-4">
-            <!--Grid row-->
-            <div class="row">
-              <!--Grid column-->
-              <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-                <h5 class="text-uppercase">THUG TRADE</h5>
-                <p>
-                  THUG TRADE es el sistema mas grande de ventas de Vinilos
-                 <br> 
-                  y merch de tus artistas favoritos, comparte la musica, comparte conocimiento.
-                </p>
-              </div>
-              <!--Grid column-->
-  
-              <!--Grid column-->
-              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                <h5 class="text-uppercase">TRADE</h5>
-  
-                <ul class="list-unstyled mb-0">
-                  <li>
-                    <a href="Acercade.html" class="text-white">Acerca de THUG TRADE</a>
-                  </li>
-                  <li>
-                    <a href="#!" class="text-white"
-                      >Busca a tu artista favorito</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#!" class="text-white">Anunciar</a>
-                  </li>
-                  <li>
-                    <a href="#!" class="text-white">Politica de privacidad</a>
-                  </li>
-                </ul>
-              </div>
-              <!--Grid column-->
-  
-              <!--Grid column-->
-              <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                <h5 class="text-uppercase mb-0">THE KNOWLEDGE</h5>
-  
-                <ul class="list-unstyled">
-                  <li>
-                    <a href="#!" class="text-white">Licencia</a>
-                  </li>
-                  <li>
-                    <a href="#!" class="text-white">Contactanos</a>
-                  </li>
-                  <li>
-                    <a href="#!" class="text-white">Desarrolladores</a>
-                  </li>
-                  <li>
-                    <a href="#!" class="text-white">Condiciones de uso</a>
-                  </li>
-                </ul>
-              </div>
-              <!--Grid column-->
+      <!-- Footer -->
+      <footer class="bg-black text-white text-center text-md-start">
+        <!-- Grid container -->
+        <div class="container p-4">
+          <!--Grid row-->
+          <div class="row">
+            <!--Grid column-->
+            <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+              <h5 class="text-uppercase">THUG TRADE</h5>
+              <p>
+                THUG TRADE es el sistema mas grande de ventas de Vinilos
+                <br>
+                y merch de tus artistas favoritos, comparte la musica, comparte conocimiento.
+              </p>
             </div>
             <!--Grid column-->
 
@@ -216,7 +163,7 @@
                   <a href="#!" class="text-white">Contactanos</a>
                 </li>
                 <li>
-                  <a href="quienes.html" class="text-white">Desarrolladores</a>
+                  <a href="#!" class="text-white">Desarrolladores</a>
                 </li>
                 <li>
                   <a href="#!" class="text-white">Condiciones de uso</a>
@@ -225,7 +172,51 @@
             </div>
             <!--Grid column-->
           </div>
-          <!--Grid row-->
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">TRADE</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="Acercade.html" class="text-white">Acerca de THUG TRADE</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Busca a tu artista favorito</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Anunciar</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Politica de privacidad</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase mb-0">THE KNOWLEDGE</h5>
+
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!" class="text-white">Licencia</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Contactanos</a>
+              </li>
+              <li>
+                <a href="quienes.html" class="text-white">Desarrolladores</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Condiciones de uso</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
         </div>
         <!-- Grid container -->
 
