Validacion_formulario_estilo_dash_orden

--- a/Thug Knowledge - Duoc UC/carrito.html
+++ b/Thug Knowledge - Duoc UC/carrito.html
@@ -77,21 +77,21 @@
                       <td>Legends Never die</td>
                       <td>juice world</td>
                       <td>$55.000</td>
-                      <td> <img src="img/lndjuice99.jpg" alt="icon"></td>
+                      <td> <img src="ImagenesFull_size/lndjuice99.jpg" alt="icon"></td>
                     </tr>
                     <tr>
                       <th scope="row">2</th>
                       <td>Shoot For The Stars Aim For The Moon (Deluxe)</td>
                       <td>Pop Smoke</td>
                       <td>$75.000</td>
-                      <td> <img src="img/sftpopsmoke100.jpg" alt=""></td>
+                      <td> <img src="ImagenesFull_size/sftpopsmoke100.jpg" alt=""></td>
                     </tr>
                     <tr>
                       <th scope="row">3</th>
                       <td>Welcome To O'Block</td>
                       <td>King Von</td>
                       <td>$30.000</td>
-                      <td><img src="img/wtobkingvon100.jpg" alt=""></td>
+                      <td><img src="ImagenesFull_size/wtobkingvon100.jpg" alt=""></td>
                     </tr>
                   </tbody>
                 </table>
@@ -101,10 +101,9 @@
 
 
           <!-- Ingresar Boton de pagado y salida  -->
-          <div class="pago" style="display: flex; align-items: center; justify-content: center; height: 200px;"">
-            <a href="regitro.html"></a><button class="pagar">
-                Pagar
-
+          <div class="pago" style="display: flex; align-items: center; justify-content: center; height: 200px;">
+            <a href="regitro.html"><button  class="pagar">Pagar</button></a>
+                
             </button>
           </div>
 
