--- a/Thug Knowledge - Duoc UC/eventos.html
+++ b/Thug Knowledge - Duoc UC/eventos.html
@@ -45,7 +45,7 @@
                 <br>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/coronasunsets.jpg" alt="Card image" width="300" height="350">
+                <img class="card-img-top" src="ImagenesFull_Size/coronasunsets.jpg" alt="Card image" width="300" height="350">
                 <h4>Corona Sunsets World Chile
                     <br>
                     <h6>Playa Punta Piedra</h6>
@@ -55,7 +55,7 @@
                     evento</a>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/coachella2023.jpg" alt="Card image" width="300" height="350">
+                <img class="card-img-top" src="ImagenesFull_Size/coachella2023.jpg" alt="Card image" width="300" height="350">
                 <h4>Coachella 2023 (Weekend One)
                     <br>
                     <h6>Empire Polo Club</h6>
@@ -64,7 +64,7 @@
                 <a href="https://www.coachella.com/passes" target="_blank" class="btn btn-dark">Apuntate al evento</a>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/hwfestival.png" alt="Card image" width="300" height="350">
+                <img class="card-img-top" src="ImagenesFull_Size/hwfestival.png" alt="Card image" width="300" height="350">
                 <h4>High Water Festival 2023
                     <br>
                     <h6>Riverfront Park</h6>
@@ -75,7 +75,7 @@
         </div>
         <div class="row card-group mt-3 col-sm-12">
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/eventositw.jpg" alt="Card image">
+                <img class="card-img-top" src="ImagenesFull_Size/eventositw.jpg" alt="Card image">
                 <h4>Something in the water
                     <br>
                     <h6>Virginia Beach, Oceanfront</h6>
@@ -84,7 +84,7 @@
                 <a href="https://somethinginthewater.com/passes" target="_blank" class="btn btn-dark">Reserva ahora</a>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/pjglow2023.jpg" alt="Card image" width="300" height="350">
+                <img class="card-img-top" src="ImagenesFull_Size/pjglow2023.jpg" alt="Card image" width="300" height="350">
                 <h4>Project Glow 2023
                     <br>
                     <h6>Rfk Campus</h6>
@@ -94,7 +94,7 @@
                     target="_blank" class="btn btn-dark">Reserva ahora</a>
             </div>
             <div class="card border-0" style="width:200px">
-                <img class="card-img-top" src="img/gritalofest.png" alt="Card image" width="300" height="350">
+                <img class="card-img-top" src="ImagenesFull_Size/gritalofest.png" alt="Card image" width="300" height="350">
                 <h4>Grítalo Fest 2023
                     <br>
                     <h6>Club Ambar</h6>
