--- a/Thug Knowledge - Duoc UC/producto.html
+++ b/Thug Knowledge - Duoc UC/producto.html
@@ -15,55 +15,40 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-sm bg-black navbar-dark">
+      <div class="container-fluid">
+          <a class="navbar-brand" href="Index.html">THUG TRADE</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+                <a class="nav-link" href="Shop.html">Vinilos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  <a class="nav-link" href="Eventos.html">Eventos</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="dashboard.html">Vista Admin</a>
+            </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
-      </nav>
+    </nav>
   </header>
   <main>
     <div class="container">
         <div class="row">
             <div class="col">
                 <div class="p-3">
-                    <img src="img/14.jpg" alt="" class="mx-auto d-block w-100 img-fluid">
+                    <img src="ImagenesFull_Size/14.jpg" alt="" class="mx-auto d-block w-100 img-fluid">
                 </div>
             </div>
             <div class="col-md-6 d-flex justify-content-center align-items-center order-lg-2">
                 <div class="p-3">
-                    <h1 class="custom-highlight"> vinilo</h1>
-                    <h1>escucha la wea</h1>
+                    <h1 class="custom-highlight"> Vinilo</h1>
+                    <h1>Escucha la wea</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam aliquam qui, similique deserunt sapiente officia quidem beatae aspernatur dignissimos magnam ducimus. Sunt nulla debitis sed quod corporis? Soluta, sed est?</p>
                     <button type="button" class="btn btn-primary">Comprar</button>
                 </div>
@@ -71,8 +56,82 @@
         </div>
     </div>
   </main>
-  <footer>
-    <!-- place footer here -->
+  <footer class="bg-black text-white text-center text-md-start">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!--Grid row-->
+      <div class="row">
+        <!--Grid column-->
+        <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+          <h5 class="text-uppercase">THUG TRADE</h5>
+          <p>
+            THUG TRADE es el sistema mas grande de ventas de Vinilos
+          <br> 
+            y merch de tus artistas favoritos, comparte la musica, comparte conocimiento.
+          </p>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">TRADE</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="quienes.html" class="text-white">Acerca de THUG TRADE</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white"
+                >Busca a tu artista favorito</a
+              >
+            </li>
+            <li>
+              <a href="#!" class="text-white">Anunciar</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Politica de privacidad</a>
+            </li>
+            <li>
+              <a href="Registro2dos.html" class="text-white">Registro </a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase mb-0">THE KNOWLEDGE</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!" class="text-white">Licencia</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Contactanos</a>
+            </li>
+            <li>
+              <a href="quienes.html" class="text-white">Desarrolladores</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Condiciones de uso</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+      </div>
+      <!--Grid row-->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div
+      class="text-center p-3"
+      style="background-color: rgba(0, 0, 0, 0.2)"
+    >
+      © 2023 Copyright:
+      <a class="text-white" href="Index.html">THUG TRADE</a>
+    </div>
+    <!-- Copyright -->
   </footer>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
