--- a/Thug Knowledge - Duoc UC/Login_Inicial.html
+++ b/Thug Knowledge - Duoc UC/Login_Inicial.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="styleindex.css">
+        <LInk rel="stylesheet" href="css/REGISTRO.CSS"></LInk>
     <title>Login</title>
 </head>
 <body>
@@ -24,23 +25,27 @@
                     style="width: 17rem;font-family: 'Courier New', Courier, monospace;">La Experiencia de comprar musica,
                     Esta aca!.</small>
             </div>
-
-
-
             <div class="col-md-6 right-box">
                 <div class="row align-items-center">
                     <div class="header-text mb-4">
                         <h2>THUG TRADE</h2>
                         <p>Cotentos de tenerte de vuelta</p>
                     </div>
-                    <div class="input-group mb-3">
-                        <input type="text" class="form-control form-control-lg bg-light fs-6"
-                            placeholder="Correo Electronico">
+                    <div class="mb-3">
+                        <label for="Nombrelogin" class="form-label"></label>
+                            <input type="text" class="form-control" name="nombrelogin" placeholder="Nombre Usuario">
+                            <span></span>
                     </div>
-                    <div class="input-group mb-1">
-                        <input type="password" class="form-control form-control-lg bg-light fs-6"
-                            placeholder="contraseña">
-                    </div>
+                </div>
+                <div class="mb-3 ">
+                    <label for="CorreoE" class="form-label"></label>
+                        <input type="email" class="form-control" name="CorreoE" placeholder="Correo Electronico">
+                        <span></span>
+                </div>
+                    <div class=" mb-3">
+                        <label for="passwordlogin" class="form-label"></label>
+                        <input type="password" class="form-control" name="passwordlogin" placeholder="Contraseña">
+                        <span></span>
                     <div class="input-group mb-5 d-flex justify-content-between">
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="formCheck">
@@ -51,22 +56,18 @@
                             <small><a href="#">Olvidaste la contraseña ?</a></small>
                         </div>
                     </div>
-                    <a href="Index.html"><div class="input-group mb-3">
-                        <button class="btn btn-lg btn-primary w-100 fs-6">Login</button>
+                    <a href="Index.html"><div class="input-group mb-3 "style="display: flex; align-items: center; justify-content: center; height:px;" >
+                        <button id="btn-login" class="btn btn-lg btn-primary w-100 fs-6">Login</button>
                     </div></a>
-                    <div class="input-group mb-3">
-                        <button class="btn btn-lg btn-light w-100 fs-6"><img src="ImagenesFull_Size/google.png" style="width:20px"
-                                class="me-2"><small>Inicia sesion con google</small></button>
                     </div>
                     <div class="row">
-                        <a href="regitro.html"></a><small>No tienes cuenta? <a href="#">Crea tu cuenta </a></small>
+                        <a href="#"></a><small>No tienes cuenta? <a href="Registro.html">Crea tu cuenta </a></small>
                     </div>
                 </div>
-            </div>
-
+            </div>  
         </div>
     </div>
-
+    <script src="Js/Validacion_login.js"></script>
 </body>
 
 </html>
