--- a/Thug Knowledge - Duoc UC/producto3.html
+++ b/Thug Knowledge - Duoc UC/producto3.html
@@ -15,28 +15,24 @@
 
 <body>
     <header>
-
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm bg-black navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="Index.html">Inicio</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="Index.html">THUG TRADE</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <div class="collapse navbar-collapse" id="mynavbar">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Productos</a>
+                            <a class="nav-link" href="Shop.html">Vinilos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blogs</a>
+                            <a class="nav-link" href="Eventos.html">Eventos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            <a class="nav-link" href="dashboard.html">Vista Admin</a>
                         </li>
                     </ul>
-
                 </div>
             </div>
         </nav>
@@ -49,13 +45,13 @@
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="img/sftpopsmoke.jpg" class="d-block w-100" alt="...">
+                                <img src="ImagenesFull_size/sftpopsmoke.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/sftpopsmoke.jpg" class="d-block w-100" alt="...">
+                                <img src="ImagenesFull_size/sftpopsmoke.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/sftpopsmoke.jpg" class="d-block w-100" alt="...">
+                                <img src="ImagenesFull_size/sftpopsmoke.jpg" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -84,40 +80,77 @@
 
 
     </main>
-    <footer class="bg-dark text-white text-center text-lg-start">
+    <footer class="bg-black text-white text-center text-md-start">
+        <!-- Grid container -->
         <div class="container p-4">
+            <!--Grid row-->
             <div class="row">
+                <!--Grid column-->
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Footer Content</h5>
+                    <h5 class="text-uppercase">THUG TRADE</h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                        molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae aliquam
-                        voluptatem veniam, est atque cumque eum delectus sint!
+                        THUG TRADE es el sistema mas grande de ventas de Vinilos
+                        <br>
+                        y merch de tus artistas favoritos, comparte la musica, comparte conocimiento.
                     </p>
                 </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
+                    <h5 class="text-uppercase">TRADE</h5>
+
                     <ul class="list-unstyled mb-0">
-                        <li><a href="#!" class="text-white">Link 1</a></li>
-                        <li><a href="#!" class="text-white">Link 2</a></li>
-                        <li><a href="#!" class="text-white">Link 3</a></li>
-                        <li><a href="#!" class="text-white">Link 4</a></li>
+                        <li>
+                            <a href="quienes.html" class="text-white">Acerca de THUG TRADE</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Busca a tu artista favorito</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Anunciar</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Politica de privacidad</a>
+                        </li>
+                        <li>
+                            <a href="Registro2dos.html" class="text-white">Registro </a>
+                        </li>
                     </ul>
                 </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase mb-0">Links</h5>
+                    <h5 class="text-uppercase mb-0">THE KNOWLEDGE</h5>
+
                     <ul class="list-unstyled">
-                        <li><a href="#!" class="text-white">Link 1</a></li>
-                        <li><a href="#!" class="text-white">Link 2</a></li>
-                        <li><a href="#!" class="text-white">Link 3</a></li>
-                        <li><a href="#!" class="text-white">Link 4</a></li>
+                        <li>
+                            <a href="#!" class="text-white">Licencia</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Contactanos</a>
+                        </li>
+                        <li>
+                            <a href="quienes.html" class="text-white">Desarrolladores</a>
+                        </li>
+                        <li>
+                            <a href="#!" class="text-white">Condiciones de uso</a>
+                        </li>
                     </ul>
                 </div>
+                <!--Grid column-->
             </div>
+            <!--Grid row-->
         </div>
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2023 MordelonesGang: Puros mordelones por deporte wuajaj.
+        <!-- Grid container -->
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2023 Copyright:
+            <a class="text-white" href="Index.html">THUG TRADE</a>
         </div>
+        <!-- Copyright -->
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
